# 2024-10base-t1s

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  arp_test
.github/workflows/: build-rust.yml  check-all.yml  lint-basic.yml  lint-c.yml  lint-python.yml  lint-rust.yml
arp-test/: Makefile  README.md  arp_reply.c  arp_request.c  arp_test.c  main.c  register.c  spi.c
arp-test/inc/: arp_test.h  hardware_dependent.h  spi.h
examples/: CMakeLists.txt
examples/arp/: CMakeLists.txt  arp.c  arp_test.h
examples/ioctl/: CMakeLists.txt  ioctl.c  ioctl.h
examples/udp-integrity-check/: CMakeLists.txt  udp-integrity-check.c
include/: arp.h
include/10baset1s/: lan865x.h  rpi_spi.h  xbaset1s_arch.h
scripts/: monitor.py  ncmonitor.py
set-register/: LICENCE.txt  MACPHY_ConfigFile.txt  Makefile  NCN26010_Driver  README.md  install.sh  netconf.sh
set-register/Include/: NCN26010.h  T1S_Hardware.h  T1S_TCP-IP.h
set-register/Source/: NCN26010.c  NCN26010_Main.c  T1S_RaspberryPiHardware.c  T1S_TAPTCP-IP.c
src/: README  README.md  arch.h  arp_test.c  arp_test.h  hardware_dependent.h  lan865x-micron.h  lan865x_control.c  lan865x_data.c  main.c  register.c  register.h  rpi_spi.c  spi.c  spi.h
src/device_driver/LAN8650/: .depend  Makefile  README.md  arch.h  arp_test.c  cscope.files  drv_main.c  mac_frame_data_handle.c  register.c  register.h  spi.c  spi.h  tags
src/linux/: .config
src/test_app/: Makefile  Makefile.inc
src/test_app/app/: Makefile  buffer_handler.c  buffer_handler.h  command_parser.c  command_parser.h  create_ethernet_packet.c  icmp.c  (+7 more)
(+31 files in other folders)
